# TwintailLauncher

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: update-aur-bin.yml  update-aur-stable-src.yml  update-winget.yml
electron/: main.mjs  preload.mjs  sidecar-client.mjs
launcher-core/: Cargo.toml
launcher-core/src/: bridge.rs  data.rs  lib.rs  protocol.rs  runtime.rs  service.rs
launcher-core/src/commands/: install.rs  manifest.rs  mod.rs  network.rs  queue.rs  repository.rs  runners.rs  settings.rs
launcher-core/src/downloading/: connection_monitor.rs  download.rs  misc.rs  mod.rs  preload.rs  queue.rs  repair.rs  update.rs
launcher-core/src/utils/: args.rs  db_manager.rs  discord_rpc.rs  game_launch_manager.rs  git_helpers.rs  gpu.rs  mod.rs  models.rs  repo_manager.rs  shortcuts.rs
launcher-sidecar/: Cargo.toml
launcher-sidecar/src/: main.rs
scripts/: electron-dev.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: install.rs  manifest.rs  mod.rs  network.rs  runners.rs  settings.rs
src-tauri/src/downloading/: connection_monitor.rs  download.rs  misc.rs  mod.rs  preload.rs  (+6 more)
src/components/: AppLoadingScreen.tsx  GameButton.tsx  InstallContextMenu.tsx
src/constants/: events.ts
src/context/: DialogContext.tsx
src/services/: dialogEvents.ts  events.ts  loader.ts  runtime.ts
src/styles/: tokens.ts
src/types/: downloadQueue.ts
src/utils/: determineButtonType.ts  imagePreloader.ts  progress.ts
(+58 files in other folders)
