[package]
name = "launcher-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
arboard = "3.6.1"
cuid2 = "0.1"
dirs = "6"
#fischl = { path = "../fischl-rs", features = ["compat", "download"] }
#fischl = { git = "https://github.com/TwintailTeam/fischl-rs.git", branch = "master", features = ["compat", "download"] }
fischl = { git = "https://github.com/Minlor/fischl-rs.git", branch = "master", features = ["compat", "download"] }
futures-core = "0.3"
git2 = "0.20"
gumdrop = "0.8.1"
keepawake = "0.6.0"
linked-hash-map = "0.5.6"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["native-tls-vendored", "__tls"], default-features = false }
rpcdiscord = "0.2.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7.4", features = ["sqlite", "json", "time", "runtime-tokio"] }
steam_shortcuts_util = "1.1.8"
tokio = { version = "1", features = ["full"] }

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
wgpu = { version = "27.0.1", default-features = true }

[target."cfg(any(target_os = \"windows\"))".dependencies]
shortcuts-rs = "1.1.1"
